--- a/docs/getting-started/setup.mdx
+++ b/docs/getting-started/setup.mdx
@@ -162,7 +162,11 @@ or add the following to your `requirements.txt` file:
 mage-ai[spark]
 ```
 
-read more about installing from `requirements.txt` [here](/development/dependencies/requirements).
+You can access the terminal from the side nav on the right in the pipeline editor page. Read more about installing from `requirements.txt` [here](/development/dependencies/requirements).
+
+<Frame>
+<img src="https://github.com/mage-ai/assets/blob/main/terminal.png?raw=True"/>
+</Frame>
 
 ## 🧭 Journey on
 
