Added Dremio to docs/data-integrations

--- a/docs/data-integrations/overview.mdx
+++ b/docs/data-integrations/overview.mdx
@@ -64,6 +64,7 @@ Read more about Sources:
 - [Commercetools](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/sources/commercetools/README.md)
 - [Couchbase](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/sources/couchbase/README.md)
 - [Datadog](https://github.com/mage-ai/mage-ai/tree/master/mage_integrations/mage_integrations/sources/datadog/README.md)
+- [Dremio](https://github.com/mage-ai/mage-ai/tree/master/mage_integrations/mage_integrations/sources/dremio/README.md)
 - [DynamoDB](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/sources/dynamodb/README.md)
 - [Facebook Ads](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/sources/facebook_ads/README.md)
 - [Freshdesk](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/sources/freshdesk/README.md)
