--- a/docs/guides/load-api-data.mdx
+++ b/docs/guides/load-api-data.mdx
@@ -17,7 +17,7 @@ In this tutorial, we'll create a data pipeline with the following steps:
     We'll use a Python block to transform the data by cleaning the columns and creating a new column, `number of meals`, that counts the number of meals for each user.
 </Step>
 <Step title="Write the transformed data to a local DuckDB database">
-    Finally, we'll write the transformed data to a locak DuckDB table.
+    Finally, we'll write the transformed data to a local DuckDB table.
 </Step>
 </Steps>
 
