--- a/docs/guides/community-examples.mdx
+++ b/docs/guides/community-examples.mdx
@@ -14,6 +14,10 @@ In her post, Xiaoxu introduces the concept of a _communication lifecycle_ for da
 
 Sri Nikitha walks through a demo of Mage: from installation to a sample pipeline that loads data from a NYC taxi dataset, transforms it, and exports to BigQuery. 
 
+### [Postgres to Snowflake Data Transfer](https://sudsy-pail-0c7.notion.site/Data-Migration-Tutorial-using-Mage-46c027b4095d4c9c8216c566eee3c3a4)
+
+Jafar Sharif walks through a tutorial on how to transfer data from Postgres to Snowflake using Mage, including some core ETL functionality. A quick and fun read!
+
 ## Video Tutorials
 
 ### How To Create Data Pipelines in Mage
@@ -57,3 +61,4 @@ Arul discusses the process of constructing an ETL (extract-transform-load) pipel
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
+
