add a data integration source/dest

--- a/docs/data-integrations/destinations/overview.mdx
+++ b/docs/data-integrations/destinations/overview.mdx
@@ -18,3 +18,7 @@ Destinations are defined in the `mage_integrations/destinations/` directory.
 
 All destinations should be a subclass of the `Destination` class defined in
 `mage_integrations/destinations/base.py`.
+
+## Contribute
+
+Want to learn about contributing a destination? Read on [here](/contributing/data-integrations/add-new-destination)!
