--- a/docs/data-integrations/sources/overview.mdx
+++ b/docs/data-integrations/sources/overview.mdx
@@ -25,3 +25,7 @@ Sources are defined in the `mage_integrations/sources/` directory.
 
 All sources should be a subclass of the `Source` class defined in
 `mage_integrations/sources/base.py`.
+
+## Contribute
+
+Want to learn about contributing a source? Read on [here](/contributing/data-integrations/add-new-source)!
