--- a/docs/getting-started/setup.mdx
+++ b/docs/getting-started/setup.mdx
@@ -126,7 +126,11 @@ If you haven't already, open a browser to `http://localhost:6789`. From the pipe
 <img src="https://github.com/mage-ai/assets/blob/main/quickstart/open-pipeline.gif?raw=True"/>
 </p>
 
-Select the first cell by clicking it and select the "play" icon in the top right to run the cell. You've just ran your first Mage block & loaded data from a dataset!
+Select the first block by clicking it and select the "play" icon in the top right to run the block. You've just ran your first Mage block & loaded data from a dataset!
+
+<Accordion title="🤔 What's a block?">
+<Snippet file="whats-a-block.mdx"/>
+</Accordion>
 
 Do the same for the following cells in the pipeline to transform and export the data. Congrats, you're now a Mage ninja! 🥷
 
