--- a/docs/data-integrations/destinations/overview.mdx
+++ b/docs/data-integrations/destinations/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Destinations technical documentation"
 sidebarTitle: "Overview"
-description: "A source is a system that you want to load data from and synchronize it into another system. A source can be a 3rd party API, SaaS, database, data warehouse, or a data lake."
+description: "A destination is a system where you want the data to be exported. A destination can be a 3rd party API, SaaS, database, data warehouse, or a data lake."
 ---
 
 ## Singer spec
