--- a/docs/integrations/databases/Chroma.mdx
+++ b/docs/integrations/databases/Chroma.mdx
@@ -29,7 +29,9 @@ default:
 - Chroma data exporter arguments:
   - df: Dataframe contains the actual data.
   - collection: collection to use. Otherwise the collection defined in io_config.yml will be used.
-  - document_column: specify the column inn df dataframe that containing documents to be stored in Chroma.
+  - document_column: specify the column in df dataframe that contains documents to be stored in Chroma.
+  - id_column: specify the column in df dataframe that contains the id of the document
+  - metadata_column: specify the column in df dataframe that contains the metadata of the document (metadata should be dictionary format)
 
 3. Add your customized code into the loader, exporter or add extra transformer blocks.
 4. Run the block.
