[xy] Update docs.

--- a/docs/integrations/databases/Chroma.mdx
+++ b/docs/integrations/databases/Chroma.mdx
@@ -22,6 +22,7 @@ default:
 
 - Chroma data loader arguments:
   - n_results: Number of results to match.
+  - collection: collection to use. Otherwise the collection defined in io_config.yml will be used.
   - query_texts: the texts or documents used to query.
   - query_embeddings: the embeddings used to query.
   Either `query_texts` or `query_embeddings` should be available.
