--- a/docs/development/project/local-timezone.mdx
+++ b/docs/development/project/local-timezone.mdx
@@ -12,11 +12,15 @@ time.
 
 1. Go to your project's `Settings` page (with the wrench icon) from the
 left vertical navigation panel.
-2. Under the "Features" section, click the toggle to turn the `display_local_timezone`
+2. Under the "Features" section, click the toggle to turn the `Display local timezone`
 setting on.
 3. Then click the blue `Save project settings` button to save and persist the
 new settings. If you do not click this button, you will lose any changes when
 leaving the page.
+
+- Alternatively (starting with v0.9.48), you can simply click on the time in the header
+and toggle on the `Display local timezone` setting from the dropdown menu. This may
+require a page refresh for the timestamps to change to UTC or local time.
 
 <Info>
   Please note that certain pages (e.g. a pipeline's Monitor page) or components
