--- a/docs/getting-started/kernels.mdx
+++ b/docs/getting-started/kernels.mdx
@@ -72,6 +72,11 @@ to specify the some EMR config fields in project's metadata.yaml file. And then
 we'll launch an EMR cluster when you executing the pipeline with
 `mage run [project_name] [pipeline]` command. Example EMR config:
 
+## Restart kernel
+
+If your block execution is hanging in the notebook and no block ouput is printed, you can try interrupting the block execution and
+restarting the kernel. You can find the "Restart kernel" button in the "Run" menu at the top of the notebook.
+
 ## Switching kernels <a name="switching_kernels"></a>
 
 To switch kernels, you first need to follow the steps in the corresponding
