--- a/docs/integrations/databases/Qdrant.mdx
+++ b/docs/integrations/databases/Qdrant.mdx
@@ -17,22 +17,25 @@ default:
 ## Using Python block
 
 1. Create a new pipeline or open an existing pipeline.
-2. Add a data loader or data exporter with Template. Under "Databases" category you can
- find the "Qdrant" template. Data loader and exporter use `SentenceTransformer` 'all-MiniLM-L6-v2'
-as default embeddinng function.
+2. Add a data loader or data exporter using the Qdrant template under the "Databases" category.
+Both the data loader and exporter use SentenceTransformer 'all-MiniLM-L6-v2' as the default embedding function.
+3. Add your customized code into the loader, exporter or add extra transformer blocks.
+4. Run the block.
+
+## Available functions
 
 - Qdrant data loader arguments:
   - limit_results (int): Number of results to return.
   - query_vector (List): vector lit used for query.
-  - collection_name (str): name of the collection. Defaults to the name defined in io_config.yaml.
+  - collection_name (str): name of the collection. Default to use the name defined in io_config.yaml.
 
 - Qdrant data exporter arguments:
   - df (DataFrame): Data to export.
-  - collection_name (str): name of the collection.
+  - document_column (str): Column name containinng documents to export.
+  - id_column (str): Column name of the id. Default will use index in df.
+  - vector_column (str): Column name of the vector. Will use default encoder to auto generate query vector.
+  - collection_name (str): name of the collection. Deafult to use the name defined in io_config.yaml.
   - vector_size (int): dimension size of vector.
   - distance (models.Distance): distance metric to use.
 
 At the same time there is `create_collection` function can be used in your block to create new collection.
-
-3. Add your customized code into the loader, exporter or add extra transformer blocks.
-4. Run the block.
