[sm] Doc bugfix in data-loading doc for DuckDB and Snowflake

--- a/docs/design/data-loading.mdx
+++ b/docs/design/data-loading.mdx
@@ -1007,9 +1007,10 @@ __init__(self,
          schema: str = None,
          verbose: bool = True,
          **kwargs
-        )```
+        )
+```
 
-Initializes the MySQL data loading client.
+Initializes the DuckDB data loading client.
 
 -   **Args**:
     -   `database (str)`: The name of the database to connect to.
