--- a/docs/integrations/databases/ClickHouse.mdx
+++ b/docs/integrations/databases/ClickHouse.mdx
@@ -88,3 +88,9 @@ However, this may not be optimal for various use cases. Since [table creation](h
 in `ClickHouse` can involve numerous details, it is strongly advised to
 create the destination table manually before loading data to ensure it
 meets specific requirements.
+
+If generating the destination table via Mage export method, one can ovewrite specific column types
+by using the `overwrite_types` dict setting.
+
+Example:
+overwrite_types = {'column_name': 'VARCHAR(255)'}
