--- a/docs/_snippets/whats-a-block.mdx
+++ b/docs/_snippets/whats-a-block.mdx
@@ -1,6 +1,6 @@
 Blocks are just Python files that live in your project. You can navigate through your blocks on the left side of the screen, drag and drop them into your pipeline, or create new ones from the pipeline editor.
 
-Blocks are reusable, atomic peices of code that perform certain actions. Changing one block _will_ change it everywhere it's used, but don't worry, it's easy to detach blocks to separate instances if necessary.
+Blocks are reusable, atomic pieces of code that perform certain actions. Changing one block _will_ change it everywhere it's used, but don't worry, it's easy to detach blocks to separate instances if necessary.
 
 Blocks can be used to perform a variety of actions, from simple data transformations to complex machine learning models. You can even use blocks to run custom code, or to connect to external services.
 
