--- a/docs/getting-started/setup.mdx
+++ b/docs/getting-started/setup.mdx
@@ -68,7 +68,7 @@ If you're familiar with [Docker Compose](https://docs.docker.com/compose/) or pl
       ```
    </CodeGroup>
 
-   Once the server is running, open `http://localhost:6789` in your browser and explore! If using any cloud provider use external IP address with the port eg 123.456.78:6789. We recommend one of our [guides](/guides/overview) to for inspiration.
+   Once the server is running, open `http://localhost:6789` in your browser and explore! If using any cloud provider use external IP address with the port eg 123.456.78:6789. We recommend one of our [guides](/guides/overview) for inspiration.
 
    ### What's happening?
 
