--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -14,6 +14,7 @@ description: "Latest new features and changelog."
 ---
 
 [All releases](https://github.com/mage-ai/mage-ai/releases)
+1. [0.9.48 | The Boy and the Heron Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.48)
 1. [0.9.46 | Wish Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.46)
 1. [0.9.45 | Yuji Itadori Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.45)
 1. [0.9.43 | Attack on Titan Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.43)
