--- a/docs/production/deploying-to-cloud/aws/terraform-apply-policy.mdx
+++ b/docs/production/deploying-to-cloud/aws/terraform-apply-policy.mdx
@@ -88,7 +88,26 @@ sidebarTitle: "Apply policies"
         "rds:DescribeDBInstances",
         "rds:DescribeDBSubnetGroups",
         "rds:ListTagsForResource",
-        "rds:ModifyDBInstance"
+        "rds:ModifyDBInstance",
+        "ecr:CreateRepository",
+        "ecr:DescribeRepositories",
+        "ecr:GetRegistryScanningConfiguration",
+        "ecs:ListClusters",
+        "elasticfilesystem:TagResource",
+        "elasticfilesystem:CreateMountTarget",
+        "ecs:ListServices",
+        "cloudwatch:GetMetricData",
+        "logs:FilterLogEvents",
+        "application-autoscaling:DescribeScalingPolicies",
+        "ecs:ListAccountSettings",
+        "ecs:UpdateService",
+        "ecr:GetAuthorizationToken",
+        "ecr:PutImage",
+        "ecr:InitiateLayerUpload",
+        "ecr:UploadLayerPart",
+        "ecr:CompleteLayerUpload",
+        "ecr:BatchCheckLayerAvailability",
+        "ecr:DescribeImages"
       ],
       "Resource": "*"
     }
