[dy] Add version to docs

--- a/docs/production/data-sync/git-sync.mdx
+++ b/docs/production/data-sync/git-sync.mdx
@@ -19,6 +19,8 @@ use the same credentials that are provided for the main repository to update the
 
 <Note>
 
+For Mage versions `>= 0.9.51`
+
 Mage will prioritize git settings from environment variables when they are set. If you want to be able
 to change git settings from the UI, you will need to set the `GIT_OVERWRITE_WITH_PROJECT_SETTINGS` environment
 variable to `1`. Otherwise, edits to the git settings from the UI will not be applied.
