[dy] Add name field

--- a/docs/production/developing-in-the-cloud/workspaces/overview.mdx
+++ b/docs/production/developing-in-the-cloud/workspaces/overview.mdx
@@ -70,6 +70,7 @@ default values as needed. All fields in the workspace config defaults are option
 
 ...
 workspace_config_defaults:
+  name: str
   lifecycle_config:
     termination_policy:
       enable_auto_termination: bool
