Added url protocol option to rabbitmq streaming

--- a/docs/streaming/sources/rabbitmq.mdx
+++ b/docs/streaming/sources/rabbitmq.mdx
@@ -13,6 +13,7 @@ queue_name: 'default'
 username: 'guest'
 password: 'guest'
 amqp_url_virtual_host: '%2f'
+url_protocol: 'amqp'
 ```
 
 You can even control some of the RabbitMQ consumer configurations using the following fields.
