Replaced all references to default admin email with example.com

--- a/docs/production/authentication/overview.mdx
+++ b/docs/production/authentication/overview.mdx
@@ -78,7 +78,7 @@ Here are the default credentials for the owner user to sign in with:
 
 | Field | Value |
 | --- | --- |
-| Email | `admin@admin.com` |
+| Email | `admin@example.com` |
 | Password | `admin` |
 
 ## Sign in page
