--- a/docs/development/variables/environment-variables.mdx
+++ b/docs/development/variables/environment-variables.mdx
@@ -54,6 +54,8 @@ These are the environment variables used in Mage.
 | `ACTIVE_DIRECTORY_DIRECTORY_ID` | Set this value to your organization's tenant id to enable signing in with Microsoft account.                                                                    | [More info](/production/authentication/microsoft)                        |
 | `AUTHENTICATION_MODE`           | Set the authentication mode in Mage. Omitting the variable will default to basic password authentication.                                                       | `ldap`                                                                   |
 | `DEBUG`                         | Turn on "debug" mode. Mage will output more logs that could be useful for debugging issues.                                                                     | 1                                                                        |
+| `DEFAULT_ADMIN_EMAIL`           | Default email value for the default owner user                                                                                                                  | admin@admin.com                                                          |
+| `DEFAULT_ADMIN_PASSWORD`        | Default password value for the default owner user                                                                                                               | admin                                                                    |
 | `DISABLE_NOTEBOOK_EDIT_ACCESS`  | Setting this variable will disable edit access based on the value. [More information](/production/configuring-production-settings/overview#read-only-access)    | 1                                                                        |
 | `DISABLE_TERMINAL`              | Setting this variable will disable access to the terminal.                                                                                                      | 1                                                                        |
 | `ENV`                           | Set the environment of the Mage app. You can use different code or configurations in different environments.                                                    | `dev`, `staging`, `production`/`prod`                                    |
