--- a/docs/production/deploying-to-cloud/aws-without-terraform.mdx
+++ b/docs/production/deploying-to-cloud/aws-without-terraform.mdx
@@ -70,8 +70,8 @@ sudo apt update && \
 ### Run script to start Mage
 
 We provide the `scripts/run_ec2.sh` script to launch Mage in an EC2 instance.
-Currently only connections via SSH are supported. To access this script clone
-this repository.
+Currently only connections via SSH are supported. To access [this script](https://github.com/mage-ai/mage-ai/blob/master/scripts/run_ec2.sh) 
+clone this [repository](https://github.com/mage-ai/mage-ai).
 
 To run Mage in an EC2 instance, you need to provide
 
