--- a/docs/integrations/databases/Qdrant.mdx
+++ b/docs/integrations/databases/Qdrant.mdx
@@ -14,6 +14,16 @@ default:
   QDRANT_PATH: path of the qdrant persisitant storage
 ```
 
+## Dependencies
+
+The dependency libraries are not installed in the docker image by default. You'll need to add the libraries to
+project `requirements.txt` file manually and install them.
+
+```
+qdrant-client==1.6.9
+sentence-transformers==2.2.2
+```
+
 ## Using Python block
 
 1. Create a new pipeline or open an existing pipeline.
