--- a/docs/guides/blocks/r-blocks.mdx
+++ b/docs/guides/blocks/r-blocks.mdx
@@ -4,6 +4,12 @@ title: "R blocks"
 
 You can write R language to transform data in blocks.
 
+## Requirements
+
+<Warning>
+R blocks are only supported when running Mage using [Docker](/getting-started/setup#using-docker).
+</Warning>
+
 ## Add R block to pipeline
 
 1. Create a new pipeline or open an existing pipeline.
