--- a/docs/production/configuring-production-settings/compute-resource.mdx
+++ b/docs/production/configuring-production-settings/compute-resource.mdx
@@ -224,6 +224,7 @@ ecs_config:
 Required IAM permissions for using ECS executor:
 ```
 [
+  "ec2:DescribeNetworkInterfaces",
   "ecs:DescribeTasks",
   "ecs:ListTasks",
   "ecs:RunTask"
