--- a/docs/guides/tips-and-tricks.mdx
+++ b/docs/guides/tips-and-tricks.mdx
@@ -185,4 +185,27 @@ description: "Here are some neat ways you can make the most of Mage! Tips and tr
   ></iframe>
   </Frame>
 </Accordion>
+
+
+<Accordion title="Dynamic Blocks" icon="bomb">
+  What are dynamic blocks? Think of them as the magical way to create tasks dynamically in our tool. If you're familiar with Airflow and the concept of Dynamic Task Mapping, this is pretty similar.
+
+  If you have a bunch of small tasks that you want to execute in parallel, Dynamic Blocks are here to save the day!
+
+  Dynamic Blocks in Mage give you the power to parallelize your workflow and reduce output effortlessly. It's a pattern that has been around in data engineering, but we've made it incredibly easy and efficient.
+
+  Learn more [here](https://docs.mage.ai/design/blocks/dynamic-blocks).
+  
+  <Frame>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/jQZb3lrAb8w"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+  ></iframe>
+  </Frame>
+</Accordion>
 </AccordionGroup>
