[jk] Update file versioning doc

--- a/docs/getting-started/file-versions.mdx
+++ b/docs/getting-started/file-versions.mdx
@@ -36,13 +36,26 @@ For more information, please read the [project setup guide](/development/project
 
 ## How to view file versions
 
+<Note>
+  For Mage versions `<0.9.58`
+</Note>
 1. Open a pipeline.
 1. Edit the pipeline.
 1. In the file browser on the left side of the page, click on a file.
 1. Near the top on the right side, click the button <b>Show versions</b>.
 1. A list of previous versions for that file will appear in the right side panel.
 
-![File versions](https://github.com/mage-ai/assets/blob/main/notebook/file-versions.jpg?raw=true)
+![File versions](https://github.com/mage-ai/assets/blob/main/notebook/file-versions/file-versions.jpg?raw=true)
+
+<Note>
+  For Mage versions `>=0.9.58`
+</Note>
+1. Go to the project Files page (located at `/files`).
+1. In the file browser on the left side of the page, click on a file.
+1. In the middle section header above the file editor, click <b>Show file versions</b>.
+1. A list of previous versions for that file will appear in the right side panel.
+
+<img src="https://github.com/mage-ai/assets/blob/main/notebook/file-versions/file-versions-v0.9.58.png?raw=true"/>
 
 ## How to restore to a previous version
 
