--- a/docs/data-integrations/batch-pipelines.mdx
+++ b/docs/data-integrations/batch-pipelines.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Using data integrations in batch pipelines"
+title: "Using data integrations in batch pipelines (in Beta)"
 sidebarTitle: "Batch pipelines"
 description: "Load data from data integration sources and export to data integration destinations as blocks inside batch pipelines."
 "og:image": "https://img.wattpad.com/5ea336f507cf05c821ffbba96cf6c7739fe8dc3e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f4672554e706c504b46744b7469413d3d2d313038313931343836362e313638396434663466313232653937363936373434323438363033362e676966"
