--- a/docs/production/developing-in-the-cloud/workspaces/kubernetes.mdx
+++ b/docs/production/developing-in-the-cloud/workspaces/kubernetes.mdx
@@ -3,6 +3,8 @@ title: "Kubernetes"
 sidebarTitle: "Kubernetes"
 ---
 
+## Setup
+
 We recommend using Helm to set up your Kubernetes cluster. You can find our Mage Helm
 documentation [here](/production/deploying-to-cloud/using-helm). You will need to create
 a persistent volume for your cluster.
@@ -30,6 +32,33 @@ env:
   - name: REQUIRE_USER_AUTHENTICATION
     value: "1"
 ```
+
+### Ingress
+
+If you want to access your workspaces through the same url, i.e. `https://your-domain.com/<workspace-name>`,
+you will need to set up an ingress.
+
+You will need to first install an ingress controller in your kubernetes cluster if you do not already have one.
+The most common ingress controller is the nginx ingress controller . You
+can find instructions on how to install the controller [here](https://kubernetes.github.io/ingress-nginx/deploy/).
+
+You can set up a default ingress through the Mage Helm chart by setting the following fields in the
+`values.yaml` file:
+
+```yaml
+ingress:
+  enabled: true
+  className: nginx
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+```
+
 
 ## Permissions
 
