--- a/docs/guides/tips-and-tricks.mdx
+++ b/docs/guides/tips-and-tricks.mdx
@@ -193,13 +193,34 @@ description: "Here are some neat ways you can make the most of Mage! Tips and tr
 
   Dynamic Blocks in Mage give you the power to parallelize your workflow and reduce output effortlessly. It's a pattern that has been around in data engineering, but we've made it incredibly easy and efficient.
 
-  Learn more [here](https://docs.mage.ai/design/blocks/dynamic-blocks).
+  Learn more [here](/design/blocks/dynamic-blocks).
   
   <Frame>
   <iframe
     width="560"
     height="315"
     src="https://www.youtube.com/embed/jQZb3lrAb8w"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+  ></iframe>
+  </Frame>
+</Accordion>
+
+<Accordion title="SQL Interpolation" icon="database">
+  🌟 Feature Highlights:
+
+  * Effortlessly interpolate variables in SQL with Jinja.
+  * Select directly from dataframes: combine Pandas and SQL to get the best of both worlds!
+
+  Read more about SQL blocks [here](/guides/blocks/sql-blocks)!
+  
+  <Frame>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/x5vBMfDukLY"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
