Feat: allow user to overwrite SQL types (#3474)
* Feat: allow user to overwrite SQL types

* Added support to clickhouse, mysql, trino & Added tests

* Nit: removing mutable data structures for argument defaults in io.sql.py

* Nit: removed union operand type

* Added docs

* added trino support and docs

* Nit: fixed isort

* Nit: fixing isort

* Fixing trino tests issue

* Nit: removed todo

* Fixed io/mysql imports

* Removed get_user_type function

Updated all user_types variables to overwrite_types

Fixed all databases docs

* Updated ClickHouse docs

--- a/docs/integrations/databases/ClickHouse.mdx
+++ b/docs/integrations/databases/ClickHouse.mdx
@@ -89,6 +89,12 @@ in `ClickHouse` can involve numerous details, it is strongly advised to
 create the destination table manually before loading data to ensure it
 meets specific requirements.
 
+If generating the destination table via Mage export method, one can ovewrite specific column types
+by using the `overwrite_types` dict setting.
+
+Example:
+overwrite_types = {'column_name': 'VARCHAR(255)'}
+
 Here is the ClickHouse data exporter code snippet that you can use:
 
 ```python
