--- a/docs/integrations/databases/MicrosoftSQLServer.mdx
+++ b/docs/integrations/databases/MicrosoftSQLServer.mdx
@@ -121,3 +121,48 @@ def export_data_to_mssql(df: DataFrame, **kwargs) -> None:
 ```
 
 <br />
+
+6. Custom types
+
+To overwrite a column type when running a python export block, simply specify the column name and type in the `overwrite_types` dict in data exporter config
+
+Here is an example code snippet:
+
+```python
+from mage_ai.settings.repo import get_repo_path
+from mage_ai.io.config import ConfigFileLoader
+from mage_ai.io.mssql import MSSQL
+from pandas import DataFrame
+from os import path
+
+if 'data_exporter' not in globals():
+    from mage_ai.data_preparation.decorators import data_exporter
+
+
+@data_exporter
+def export_data_to_mssql(df: DataFrame, **kwargs) -> None:
+    """
+    Template for exporting data to a MSSQL database.
+    Specify your configuration settings in 'io_config.yaml'.
+    Set the following in your io_config:
+
+    Docs: /integrations/databases/MicrosoftSQLServer
+    """
+    schema_name = 'dbo'  # Specify the name of the schema to export data to
+    table_name = 'your_table_name'  # Specify the name of the table to export data to
+    config_path = path.join(get_repo_path(), 'io_config.yaml')
+    config_profile = 'default'
+    overwrite_types = {'column_name': 'VARCHAR(255)'}
+
+    with MSSQL.with_config(ConfigFileLoader(config_path, config_profile)) as loader:
+        loader.export(
+            df,
+            schema_name,
+            table_name,
+            index=False,  # Specifies whether to include index in exported table
+            if_exists='replace',  # Specify resolution policy if table name already exists
+            overwrite_types=overwrite_types,
+        )
+```
+
+<br />
